# arxiv2poster

./: .gitignore  LICENSE  PRD.md  README.md  pyproject.toml  requirements.txt
arxiv2poster/: __init__.py  __main__.py  arxiv_downloader.py  cli.py  pdf_processor.py  poster_generator.py
blogposts/: 2025-11-29.md
tests/: __init__.py  test_arxiv_download.py  test_gemini_api.py  test_image_generation.py
